# SAD-system

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
config/: commands.yaml  hacks.yaml  synonyms.yaml  thresholds.yaml
docs/: COMMANDS.md  DESIGN.md  FIVE_HACKS.md  PRD.md  SABE.md
src/: __init__.py  integration.py
src/core/: __init__.py  parser.py  registry.py  validator.py
src/mapping/: __init__.py  synonyms.py  verb_mapper.py  weights.py
src/progress_hacks/: __init__.py  hacks.py  injector.py  tracker.py
src/progress_hacks/setup/: __init__.py  demo.py  presets.py  wizard.py
src/sabe/: __init__.py  protocol.py  suggestions.py  triggers.py
src/undo/: __init__.py  commands.py  history.py  snapshots.py
tests/: conftest.py  test_integration.py  test_mapper.py  test_parser.py  test_progress_hacks.py  test_sabe.py  test_setup.py  test_undo.py
